# realsense-genom3

./: Makefile.am  README.adoc  configure.ac  realsense-genom3-uninstalled.pc.in  realsense-genom3.pc.in  realsense.gen
codels/: Makefile.am  codels.hh  realsense_codels.cc  realsense_depth_codels.cc  realsense_inertial_codels.cc  realsense_main_codels.cc  realsense_visual_codels.cc  rs.cc  rs.hh
examples/: python.py  tcl-script.tcl
